--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
 
-  <base href="/">
+  <!-- <base href="/"> -->
+  <base href="https://pablot18.github.io/com-abet-front/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -40,7 +41,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2455394738';
+    var serviceWorkerVersion = '2799542109';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
